--- a/microservice1/src/main/resources/application.properties
+++ b/microservice1/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.application.name=microservice1
+spring.application.name=MICROSERVICES1
+server.port=8081
+
+management.endpoints.web.exposure.include=*
